[gd_scene load_steps=3 format=3 uid="uid://spell_slot_001"]

[ext_resource type="Script" path="res://scripts/ui/spell_slot.gd" id="1_slot_script"]

[sub_resource type="StyleBoxFlat" id="1_slot_style"]
bg_color = Color(0.2, 0.2, 0.2, 0.7)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.3, 0.25, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="SpellSlot" type="PanelContainer"]
custom_minimum_size = Vector2(64, 64)
theme_override_styles/panel = SubResource("1_slot_style")
script = ExtResource("1_slot_script")
mouse_filter = 0

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5
visible = true
mouse_filter = 2

[node name="KeyLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -16.0
offset_right = 20.0
offset_bottom = -4.0
grow_vertical = 0
theme_override_font_sizes/font_size = 12
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CooldownOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)
visible = false

